SERVER: added working scapy script for test purposes

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,6 +12,7 @@ RUN pip install --no-cache-dir -r /usr/src/app/requirements.txt
 COPY app.py /usr/src/app/
 COPY templates/index.html /usr/src/app/templates/
 COPY agent.sh /usr/src/app
+COPY steganoreader.py /
 
 # tell the port number the container should expose
 EXPOSE 80
