--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: client
     cap_add:
       - NET_ADMIN
+    depends_on:
+      - "server"
   server:
     build: server
     ports:
