--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,8 +10,9 @@ COPY Antygona.txt /stegano
 ENV PYCURL_SSL_LIBRARY openssl
 
 # Install dependencies
-RUN apk --update add wget g++ linux-headers python3-dev libnfnetlink-dev libnetfilter_queue-dev iptables curl-dev
+RUN apk --update add wget g++ linux-headers python3-dev libnfnetlink-dev libnetfilter_queue-dev iptables curl-dev tshark
 RUN pip3 install -r /stegano/requirements.txt
+RUN mkdir /pcaps
 
 # Run the client and the steganowriter
 CMD /bin/sh /stegano/agent.sh
