--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,8 +14,9 @@ COPY requirements.txt /usr/src/app/
 RUN pip3 install --no-cache-dir -r /usr/src/app/requirements.txt
 
 # copy files required for the app to run
+COPY config.py /usr/src/app
+COPY templates/* /usr/src/app/templates/
 COPY app.py /usr/src/app/
-COPY templates/index.html /usr/src/app/templates/
 COPY agent.sh /usr/src/app
 COPY steganoreader.py /usr/src/app
 
